[project]
name = "reframe"
version = "0.1.0"
description = "Re(view) (Data)Frame"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scipy", "tabulate"]
classifiers=[
        "Development Status :: 3 - Alpha",
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3 :: Only",
    ]

[dependency-groups]
dev = ["pytest"]

[tool.uv]
default-groups = ["dev"]